# nux

./: .gitignore  .gitmodules  LICENSE  Makefile.in  README.md  acpi.c.BAK  acpitbl.h.BAK  amd64.c.BAK  ansi.h.BAK  bootstrap.sh  cdefs.h.BAK  config.h.BAK  configure  configure.ac  cpu.c.BAK  crt0-common.c.BAK  ec.c.BAK  efi_md.c.BAK  elfpayload.h.BAK  entry.c.BAK  errno.h.BAK  error.c.BAK  framebuffer.h.BAK  hal_config.h.BAK  hal_config_amd64.h.BAK  hw.c.BAK  indent.sh  install.sh  internal.h.BAK  inttypes.h.BAK  kmap.c.BAK  kva.c.BAK  limits.h.BAK  locks.h.BAK  mkefi.sh  multiboot.h.BAK  nux.h.BAK  nuxar.c.BAK  pae64.c.BAK  payload.c.BAK  (+15 more)
.github/workflows/: c-linux.yml  makefile.yml
apxh/: Makefile.in  configure  configure.ac  log
apxh/efi/: Makefile.in  efi-main.c  internal.h  run.sh
apxh/efi/apxhefi/: Makefile.in  README  efi_md.c
apxh/multiboot/: Makefile.in  crt0.S  ec.c  mb.c  multiboot.h  multiboot.ld  rsdp.c
apxh/sbi/: Makefile.in  apx.ld  apxh  apxh.ld  crt0.S  crtbegin.d  ec.c  md.c
apxh/src/: elf.c  elf32.c  main.c  pae.c  payload.c  project.h  rv64-sv.c  x86.h
contrib/include/: elf.h
example/: Makefile.in  configure  configure.ac  example_multiboot  main.c
example/kern/: Makefile.in  example  main.c
example/m4/: libec.m4  libnux.m4
example/user/: Makefile.in  exuser  main.c
example/user/amd64/: crt0.S
example/user/riscv64/: crt0.S
include/: Makefile.in  config.h.in  elfpayload.h  framebuffer.h  stree.h
include/nux/: Makefile.in  apxh.h  cache.h  cpumask.h  defs.h  hal.h  locks.h  nmiemul.h  nux.h  nuxperf.h  plt.h  slab.h  slabinc.h  symbol.h  types.h
libec/: Makefile.am  Makefile.in  README  _strtoul.h  assert.h  atexit.c  bcopy.c  cdefs.h  cdefs_elf.h  crt0-common.c  crtbegin.c  ctype.c  ctype.h  ec_sources.mk  errno.h  error.c  inttypes.h  libec-compile.mk  libec-compile.mk.in  libec-embed.mk.in  libec-include.mk.in  libec-link.mk.in  libec.am  libec.am.in  libec.m4  libec.mk  libec.mk.in  limits.h  memchr.c  memcmp.c  memcpy.c  memmove.c  memset.c  printf.c  queue.h  rb.c  rbtree.h  setjmp.h  snprintf.c  stdarg.h  (+16 more)
libec/amd64/: Makefile.in  _setjmp.S  ansi.h  asm.h  crtbegin.S  crtend.S  crti.S  crtn.S  ffs.S  fls.S  inttypes.h  limits.h  setjmp.h  stdint.h
libec/i386/: Makefile.in  _setjmp.S  ansi.h  asm.h  atomic.S  crtbegin.S  crtend.S  crti.S  crtn.S  ffs.S  fls.S  inttypes.h  limits.h  memcmp.S  memcpy.S  memmove.S  memset.S  setjmp.h  stdint.h  strlen.S  strncmp.S
libec/intrinsics/: int_lib.h
libec/machine/: Makefile.in  ansi.h  asm.h  inttypes.h  limits.h  profile.h  setjmp.h  stdint.h
libec/riscv64/: Makefile.in  _setjmp.S  ansi.h  asm.h  crtend.S  inttypes.h  limits.h  setjmp.h  stdint.h
libec/sys/: Makefile.in  bitops.h  types.h
libfdt/: Makefile.in  libfdt-compile.mk.in  libfdt-link.mk.in  libfdt.mk.in
libhal_amd64/: Makefile.in  amd64.c  crt0.S  exe.ld  internal.h  vga_text.c
libhal_amd64/include/nux/: hal_config.h
libhal_riscv/: Makefile.in  crt0.S  entry.S  exe.ld  frame.c  hal.mk  hal.mk.in  internal.h  pmap.c  riscv.c  riscv.h  sv48.c
libhal_riscv/include/nux/: hal_config.h
libhal_x86/: Makefile.in  exe.ld  hal.mk  hal.mk.in  internal.h  pae.c  pfncache.c  pmap.c  serial.c  vga_text.c  x86.c  x86.h
libhal_x86/amd64/: Makefile.inc  amd64.c  amd64.h  crt0.S  entry.S  exe.ld  frame.c  pae64.c
libhal_x86/i386/: Makefile.inc  crt0.S  entry.S  exe.ld  i386.c  i386.h  i386_hal.c  pae32.c  sys_entry.c
libhal_x86/include/nux/: hal_config.h  hal_config_amd64.h  hal_config_i386.h
libnux/: Makefile.in  alloc.h  cfg.mk.in  cpu.c  ec.c  entry.c  framebuffer.c  hal.c  init.c  internal.h  kmap.c  kmem.c  ktlbgen.c  kva.c  libnux-compile.mk.in  libnux-link.mk.in  libnux.mk.in  nmiemul.c  perf.h  pfn.c  pfnalloc.c  pfncache.c  pgalloc.c  slab.c  slabinc.c  symbol.c  time.c  uaddr.c  uctxt.c  umap.c
libnux_user/: Makefile.in  libnux_user-compile.mk.in  libnux_user-link.mk.in  libnux_user.mk.in  syscalls.c
libnux_user/amd64/: arch_syscalls.h
libnux_user/i386/: arch_syscalls.h  crt0.S
libnux_user/nux/: syscalls.h
libnux_user/riscv64/: arch_syscalls.h
libplt_acpi/: Makefile.in  acpi.c  acpitbl.h  apic.h  hpet.c  hw.c  internal.h  ioapic.c  lapic.c  plt.c  rsdp.c
libplt_sbi/: Makefile.in  plt.mk.in  sbi.c
m4/: libec.m4  libfdt.m4  libnux.m4  libs.m4  mk.m4
mk/: bottom.mk  exe.mk  fatobj.mk  inc.mk  lib.mk  mk.m4  nuxexe.mk  obj.mk  subdir.mk  top.mk
porting/0_empty/: Makefile.in  README  crtbegin.s  empty  main.c
tools/: Makefile.in
tools/ar50/: Makefile.in  README  ar50.c  sq.c  squoze.c  squoze.h  unsq.c
tools/libbfd/: Makefile.in
tools/mksyms/: mksyms.sh
tools/nuxar/: Makefile.in  config.h  nux-payload.c  nuxar.c  squoze.c
tools/objappend/: Makefile.in  README  objappend.c
